// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<RadioCard
  onClick={[Function]}
  selected={true}
  title="baseline.previous_version"
>
  <p>
    baseline.previous_version.description
  </p>
</RadioCard>
`;

exports[`should render correctly 2`] = `
<RadioCard
  onClick={[Function]}
  selected={true}
  title="baseline.previous_version (default)"
>
  <p>
    baseline.previous_version.description
  </p>
</RadioCard>
`;
